--- a/sub_html/mappingTime/mappingTimeMain.html
+++ b/sub_html/mappingTime/mappingTimeMain.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="mappingTimeMainStyle.css">
+        <link rel="stylesheet" href="../mainPageStyle.css">
         <link rel="stylesheet" href="css/navigationStyle.css">
         <script type="text/javascript" src="js/pageMove.js"></script>                
-        <script type="text/javascript" src="js/iframeChange.js"></script>                
+        <script type="text/javascript" src="js/iframeChange.js"></script> 
+
     </head>
 
     <body>
-        <dic>this is main page</dic>
+        
         
     </body>
 </html>
