--- a/sub_html/mappingTime/mappingTimeMain.html
+++ b/sub_html/mappingTime/mappingTimeMain.html
@@ -10,7 +10,11 @@
     </head>
 
     <body>
-        
+        <div class="randContainer">
+
+            <img id="first" src="KimJoeun/연습용.gif">
+
+        </div>
         
     </body>
 </html>
