--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
 
         <div id="sandwichContainer">
             <div class="item"><img id="topBread" src="img/sandwich_img/topBread.svg" 
-                onclick="moveExhibition()" 
+                onclick="moveSandIdentity()" 
                 onmouseover="onMouseOverAct('sand_Container')" 
                 onmouseout="onMouseOutAct('sand_Container')">
             </div>
