--- a/detail_test.html
+++ b/detail_test.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="css/detailStyle_test.css">
         <link rel="stylesheet" href="css/navigationStyle.css">
         <script type="text/javascript" src="js/pageMove.js"></script>                
