--- a/sub_html/mappingTime/KimJoeun/KimJoeun.html
+++ b/sub_html/mappingTime/KimJoeun/KimJoeun.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="KimJoeun.css">
     <link rel="stylesheet" href="../../iframeStyle.css">
@@ -27,6 +28,13 @@
     <img class="img4" src="연습용.gif"></img>
     <img class="img5" src="3.jpg"></img>
     <iframe class="img6" src="https://www.youtube.com/embed/jC9XpHZHIb8"></iframe>
+
+    <!-- <img class="img1" ></img>
+    <img class="img2" ></img>
+    <img class="img3" ></img>
+    <img class="img4" ></img>
+    <img class="img5" ></img>
+    <iframe class="img6" ></iframe> -->
 
 </body>
 
