--- a/sub_html/mappingTime/LeeBohyeon/LeeBohyeon.html
+++ b/sub_html/mappingTime/LeeBohyeon/LeeBohyeon.html
@@ -20,7 +20,7 @@
     <div class="categoryTxt">-</div>
     <div class="explain">나태했던 지난 겨울 방학의 반성과 후회를 담은 회고록.</div>
     
-    <iframe class="img1" src="https://www.youtube.com/embed/HrBSFuwaVSo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="img1" src="https://www.youtube.com/embed/HrBSFuwaVSo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
