--- a/exhibition.html
+++ b/exhibition.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/exhibitionStyle.css">
     <link rel="stylesheet" href="css/navigationStyle.css">
     <script type="text/javascript" src="js/pageMove.js"></script>                
