--- a/sub_html/mappingTime/JungSeyoun/JungSeyoun.html
+++ b/sub_html/mappingTime/JungSeyoun/JungSeyoun.html
@@ -21,7 +21,7 @@
     <div class="explain">나의 시간은 금과 같아 연금술의 지도로 이를 표현했다.</div>
     
     <img class="img1" src="THUMB_mappingtimejj 1.png"></img>
-    <img class="img2" src="배경투명 1.png"></img>
+    <img class="img2" src="2.png"></img>
 
 </body>
 
