--- a/sub_html/mappingTime/Kangjieun/Kangjieun.html
+++ b/sub_html/mappingTime/Kangjieun/Kangjieun.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="Kangjieun.css">
+    <link rel="stylesheet" href="KangJieun.css">
     <link rel="stylesheet" href="../../iframeStyle.css">
 </head>
 
