--- a/sub_html/selfIdentity/selfIdentity.html
+++ b/sub_html/selfIdentity/selfIdentity.html
@@ -38,7 +38,7 @@
                     <div class="name" onclick="changeUrlTo(sub, 'ParkJuhye')">Park Juhye</div>
                     <div class="name" onclick="changeUrlTo(sub, 'ParkJinsung')">Park Jinsung</div>
                     <div class="name" onclick="changeUrlTo(sub, 'SeongSeulgi')">Seong Seulgi</div>
-                    <!-- <div class="name" onclick="changeUrlTo(sub, 'SongHyeju')">Song Hyeju</div>  -->
+                    <div class="name" onclick="changeUrlTo(sub, 'SongHyeju')">Song Hyeju</div>
                     <div class="name" onclick="changeUrlTo(sub, 'WangJinru')">Wang Jinru</div>
                     <div class="name" onclick="changeUrlTo(sub, 'YiDongho')">Yi Dongho</div>
                     <div class="name" onclick="changeUrlTo(sub, 'LeeBohyeon')">Lee Bohyeon</div>
