--- a/sub_html/selfIdentity/selfIdentityMain.html
+++ b/sub_html/selfIdentity/selfIdentityMain.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../mainPageStyle.css">
+        <link rel="stylesheet" href="../temp.css">
         <script type="text/javascript" src="../../js/pageMove.js"></script>                
         <script type="text/javascript" src="../../js/iframeChange.js"></script> 
         <script type="text/javascript" src="../../js/rand.js"></script> 
@@ -11,9 +11,16 @@
 
     <body>
         <div class="randContainer">
+            <div class="txt1" ><br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+                Sefl Identity는 아직 업로드 중입니다..! ㅜ 다른 작품들 먼저 감상 해주시면 금방 업로드 될 예정입니다..!</div>
             
             <script >
-                document.write( '<img src="random/'+random(12)+'.jpg" class="randimg">');
+                // document.write( '<img src="random/'+random2(12)+'.jpg" class="randimg">');
             </script>
     
         </div>
