--- a/sub_html/shapeResearch/JungSeyoun/JungSeyoun.html
+++ b/sub_html/shapeResearch/JungSeyoun/JungSeyoun.html
@@ -46,10 +46,8 @@
     <img class="img1" src="THUMB_1.png">
     <img class="img2" src="THUMB_2.png">
     <img class="img3" src="THUMB_3.png">
- 
-    
-    <!-- <iframe class="vid" src="https://www.youtube.com/embed/bnqqwy_HKTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-    
+
+    <iframe class="vid" src="https://www.youtube.com/embed/Dv0deEKU9Xw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
 
   
