--- a/sub_html/selfIdentity/ParkJuhye/ParkJuhye.html
+++ b/sub_html/selfIdentity/ParkJuhye/ParkJuhye.html
@@ -15,7 +15,7 @@
     <div class="designer">Designer</div>
     <div class="projectName">Self Identity</div>
     <div class="studentName">박주혜</div>
-    <div class="mainTitle">THE JOURNEY TO FIND MY SELF IDENTITY</div>
+    <div class="mainTitle">SELF IDENTITY</div>
     <div class="category">Category</div>
     <div class="categoryTxt">Self Identity / Pattern / Self Branding</div>
     <div class="explain">지금의 나를 이루어왔던 것들과 이루어 갈 것들</div>
@@ -26,32 +26,39 @@
     <div class="rawInfo" id="r1">Poster</div>
     <div class="rawInfo" id="r2">Identity Design</div>
     <div class="rawInfo" id="r3">Screen Shot</div>
-    <div class="categoryDetail" id="d1">나를 나타내는 패턴 작업. 드로잉에 디지털을 결합하는 방식으로 작업을 진행하였다.</div>
-    <div class="categoryDetail" id="d2">나를 표현하는 20가지의 오브제를 큐레이션하는 과제. 주로 성향, 제스처와 관련된 20가지를 나레이션과 함께 영상으로 표현하였다.</div>
-    <div class="categoryDetail" id="d3">대학교에 와서 과제물부터 개인 작업까지, 하나의 결과물들을 도출하기 이전 과정의단계에 초점을 맞춘 개인 스튜디오 브랜드를 제작하였다. <br>
+    <div class="categoryDetail" id="d1">
+        나를 나타내는 패턴 작업. 드로잉에 디지털을 결합하는 방식으로 작업을 진행하였다.
+    </div>
+    <div class="categoryDetail" id="d2">
+        나를 표현하는 20가지의 오브제를 큐레이션하는 과제. 주로 성향, 제스처와 관련된 20가지를 나레이션과 함께 영상으로 표현하였다.
+    </div>
+    <div class="categoryDetail" id="d3">
+        대학교에 와서 과제물부터 개인 작업까지, 하나의 결과물들을 도출하기 이전 과정의단계에 초점을 맞춘 개인 스튜디오 브랜드를 제작하였다. <br>
         이름이 박주혜인점과 박의 영어 park 가 공원,주차장이라는 점을 고려해 생각이부영하는 공간을 제작했다. <br>
-        이러한 아이디어들은 또하나의 다른 아이디어로 파생될 수 있다.</div>
+        이러한 아이디어들은 또하나의 다른 아이디어로 파생될 수 있다.
+    </div>
 
     <div class="l1"></div>
     <div class="l2"></div>
     <div class="l3"></div>
             
-    <div class="img1"></div>
-    <div class="img2"></div>
-    <div class="img3"></div>
-    <div class="img4"></div>
-    <div class="img5"></div>
-    <div class="img6"></div>
-    <div class="img7"></div>
-    <div class="img8"></div>
-    <div class="img9"></div>
-    <div class="img10"></div>
-    <div class="img11"></div>
-    <div class="img12"></div>
-    <div class="img13"></div>
-    <div class="img14"></div>
-    <div class="img15"></div>
-    <div class="img16"></div>
+    <img class="img1"  src="1.jpg">
+    <img class="img2"  src="2.jpg">
+    <img class="img3"  src="3.jpg">
+    <!-- <img class="img4"  src="4.jpg"> -->
+    <img class="img5"  src="5.jpg">
+    <img class="img6"  src="6.jpg">
+    <img class="img7"  src="7.jpg">
+    <img class="img8"  src="8.jpg">
+    <img class="img9"  src="9.jpg">
+    <img class="img10" src="10.jpg">
+    <img class="img11" src="11.jpg">
+    <img class="img12" src="12.jpg">
+    <img class="img13" src="13.jpg">
+    <img class="img14" src="14.jpg">
+    <img class="img15" src="15.jpg">
+    <img class="img16" src="16.jpg">
+    <img class="img17" src="17.jpg">
      
 </body>
 
