--- a/sub_html/selfIdentity/KimJoeun/KimJoeun.html
+++ b/sub_html/selfIdentity/KimJoeun/KimJoeun.html
@@ -117,7 +117,7 @@
     <div class="explain" id="txt11">&lt;PATTERN_4&gt;</div>
     <div class="explain" id="txt12">사소한 것도 아름답게</div>
     <div class="explain" id="txt13">&lt;PATTERN_5&gt;</div>
-    <div class="explain" id="txt14">작은 것들이 사실 정말 큰 것일지도</div>
+    <!-- <div class="explain" id="txt14">작은 것들이 사실 정말 큰 것일지도</div> -->
     <div class="explain" id="txt15">
 
         1. 힐링 브랜드 카테고리 별 정리 (공간, 제품, 체험, 관광, 게임, 음악 등의 카테고리) <br>
